--- a/recyclerview-extension/build.gradle
+++ b/recyclerview-extension/build.gradle
@@ -45,7 +45,7 @@ android {
 }
 
 dependencies {
-    provided 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.android.support:appcompat-v7:26.1.0'
     provided 'com.android.support:recyclerview-v7:26.1.0'
     provided 'com.android.support:support-v4:26.1.0'
 
